added Redis, Grafana and Prometheus

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,36 @@
-# Gmail configuration
-EMAIL_USER=your-email@gmail.com
-# Replace with your 16-character App Password (remove any spaces)
-# Example: if Google gives you "abcd efgh ijkl mnop"
-# Write it as: EMAIL_PASSWORD=abcdefghijklmnop
-EMAIL_PASSWORD=your-app-password-here
+# Database Configuration
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/monitoring
+
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
+
+# JWT Configuration
+JWT_SECRET_KEY=your-secret-key-here
+JWT_ACCESS_TOKEN_EXPIRES=30  # minutes
+
+# Email Configuration
 SMTP_SERVER=smtp.gmail.com
 SMTP_PORT=587
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
+
+# Server Configuration
+DEBUG=True
+HOST=0.0.0.0
+PORT=5000
+
+# Metrics Configuration
+METRICS_COLLECTION_INTERVAL=5  # seconds
+MAX_METRICS_HISTORY=100
 
 # Docker Configuration
 COMPOSE_PROJECT_NAME=system-monitoring
 
 # Dashboard Configuration
 DASHBOARD_PORT=5000
-MAX_METRICS_HISTORY=100
 
 # Metrics Agent Configuration
-METRICS_COLLECTION_INTERVAL=5  # seconds
 DEBUG_MODE=False 
