--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -1,6 +1,9 @@
 # Use Python 3.9 slim image
 FROM python:3.9-slim
 
+# Install curl for health checks
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 # Set working directory
 WORKDIR /app
 
@@ -13,9 +16,19 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the rest of the application
 COPY . .
 
+# Add the current directory to Python path
+ENV PYTHONPATH=/app
+
 # Environment variables can be overridden at runtime
-ENV DASHBOARD_URL=http://dashboard:5000
-ENV SERVER_NAME=default-server
+ENV FLASK_APP=agents.app:app
+ENV FLASK_ENV=development
+ENV FLASK_DEBUG=1
+ENV PYTHONUNBUFFERED=1
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:5000/health || exit 1
 
 # Command to run the agent
-CMD ["python", "agents/system_metrics_agent.py"] 
+ENTRYPOINT ["flask"]
+CMD ["run", "--host=0.0.0.0", "--port=5000"] 
