--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Core Dependencies
 Flask==2.3.3
 psutil==5.9.8
 requests==2.31.0
@@ -5,4 +6,38 @@ numpy==1.26.4
 scikit-learn==1.4.0
 Werkzeug==3.0.1
 gunicorn==21.2.0
-python-dotenv==1.0.1 
+python-dotenv==1.0.1
+
+# Monitoring and Metrics
+prometheus-client==0.19.0
+opentelemetry-api==1.22.0
+opentelemetry-sdk==1.22.0
+
+# API Documentation
+flask-restx==1.3.0
+swagger-ui-bundle==0.0.9
+
+# Database
+SQLAlchemy==2.0.25
+alembic==1.13.1
+psycopg2-binary==2.9.9
+
+# Caching & Message Queue
+redis==5.0.1
+celery==5.3.6
+
+# Testing
+pytest==7.4.4
+pytest-cov==4.1.0
+pytest-mock==3.12.0
+
+# Code Quality
+black==24.1.1
+pylint==3.0.3
+mypy==1.8.0
+flake8==7.0.0
+
+# Security
+python-jose==3.3.0
+passlib==1.7.4
+bcrypt==4.1.2 
